# StructuraMiner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  structuraminer.py
.github/workflows/: python-publish.yml
