[metadata]
name = structuraminer
author = Love Kaushik
author_email = lovekaushik271@gmail.com
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8+
    Topic :: Scientific/Engineering

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[bdist_wheel]
universal = 0
